--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
+      <script type="text/javascript">
+        (function(){
+        emailjs.init("%REACT_APP_EMAILJS_USERID%");
+      })();
+    </script>
   </body>
 </html>
